crates/valen-parser/tests/snapshots/parser__match_enum_destructure.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"fn f() -> Int { match shape { Shape::Circle(r) => r, Shape::Point => 0 } }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            annotations: [],
            visibility: Internal,
            name: "f",
            generics: [],
            params: [],
            return_type: Some(
                Path(
                    TypePath {
                        segments: [
                            TypePathSegment {
                                name: "Int",
                                generics: [],
                                span: Span {
                                    start: 10,
                                    end: 13,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ],
                        span: Span {
                            start: 10,
                            end: 13,
                            file_id: FileId(
                                0,
                            ),
                        },
                    },
                ),
            ),
            body: Some(
                Block {
                    stmts: [],
                    tail: Some(
                        Match(
                            MatchExpr {
                                scrutinee: Path(
                                    Path {
                                        segments: [
                                            PathSegment {
                                                name: "shape",
                                                double_colon: false,
                                                generics: [],
                                                span: Span {
                                                    start: 22,
                                                    end: 27,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 22,
                                            end: 27,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ),
                                arms: [
                                    MatchArm {
                                        pattern: Struct(
                                            StructPattern {
                                                path: Path {
                                                    segments: [
                                                        PathSegment {
                                                            name: "Shape",
                                                            double_colon: false,
                                                            generics: [],
                                                            span: Span {
                                                                start: 30,
                                                                end: 35,
                                                                file_id: FileId(
                                                                    0,
                                                                ),
                                                            },
                                                        },
                                                        PathSegment {
                                                            name: "Circle",
                                                            double_colon: true,
                                                            generics: [],
                                                            span: Span {
                                                                start: 37,
                                                                end: 43,
                                                                file_id: FileId(
                                                                    0,
                                                                ),
                                                            },
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 30,
                                                        end: 43,
                                                        file_id: FileId(
                                                            0,
                                                        ),
                                                    },
                                                },
                                                fields: [
                                                    StructPatternField {
                                                        name: "r",
                                                        pattern: None,
                                                        span: Span {
                                                            start: 44,
                                                            end: 45,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ],
                                                rest: false,
                                                span: Span {
                                                    start: 30,
                                                    end: 46,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ),
                                        guard: None,
                                        body: Path(
                                            Path {
                                                segments: [
                                                    PathSegment {
                                                        name: "r",
                                                        double_colon: false,
                                                        generics: [],
                                                        span: Span {
                                                            start: 50,
                                                            end: 51,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 50,
                                                    end: 51,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 30,
                                            end: 51,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                    MatchArm {
                                        pattern: Path(
                                            Path {
                                                segments: [
                                                    PathSegment {
                                                        name: "Shape",
                                                        double_colon: false,
                                                        generics: [],
                                                        span: Span {
                                                            start: 53,
                                                            end: 58,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                    PathSegment {
                                                        name: "Point",
                                                        double_colon: true,
                                                        generics: [],
                                                        span: Span {
                                                            start: 60,
                                                            end: 65,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 53,
                                                    end: 65,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ),
                                        guard: None,
                                        body: Literal(
                                            Int(
                                                0,
                                                Span {
                                                    start: 69,
                                                    end: 70,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            ),
                                        ),
                                        span: Span {
                                            start: 53,
                                            end: 70,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ],
                                span: Span {
                                    start: 16,
                                    end: 72,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 14,
                        end: 74,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            is_unsafe: false,
            span: Span {
                start: 0,
                end: 74,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
